<resources>
    <string name="app_name">InstogramApplication</string>

    <!-- Penanganan Error -->
    <string name="error_400">Permintaan tidak valid. Silakan periksa kembali data Anda.</string>
    <string name="error_401">Sesi telah berakhir. Silakan login kembali.</string>
    <string name="error_403">Anda tidak memiliki izin untuk mengakses data ini.</string>
    <string name="error_404">Data yang Anda cari tidak ditemukan.</string>
    <string name="error_408">Waktu permintaan habis. Periksa koneksi internet Anda.</string>
    <string name="error_422">Data yang dikirim tidak valid. Periksa kembali.</string>
    <string name="error_500">Terjadi kesalahan pada server. Silakan coba lagi nanti.</string>
    <string name="error_503">Server sedang sibuk. Silakan coba lagi nanti.</string>
    <string name="error_koneksi">Tidak ada koneksi internet. Periksa jaringan Anda.</string>
    <string name="error_takterduga">Terjadi kesalahan tak terduga. Silakan coba lagi nanti.</string>
    <string name="error_else">Terjadi kesalahan. Silakan coba lagi nanti.</string>

    <!-- Judul -->
    <string name="title_home">Instogram</string>
    <string name="next">Selanjutnya</string>

    <!-- Konfirmasi Logout -->
    <string name="yes">Ya</string>
    <string name="cancel">Batal</string>

    <!-- Widget -->
    <string name="add_widget">Tambah widget</string>
    <string name="app_widget_description">Selalu update dengan story terbaru! Lihat langsung dari widget tanpa buka aplikasi.</string>

    <!-- Hastag -->
    <string name="hastag">#%1$s #InstogramApp #AplikasiMobile #PengembangAndroid #DesainUX #PengalamanAplikasi #ArsitekturMVVM</string>

    <!-- Story -->
    <string name="cerita_anda">Cerita Anda</string>
    <string name="logout">Keluar</string>
    <string name="logout_message">Apakah kamu yakin ingin keluar? \nTindakan ini tidak bisa dibatalkan</string>

    <!-- Popup -->
    <string name="popup_error_desc">Terjadi kesalahan tak terduga. Coba lagi nanti.</string>
    <string name="popup_success_desc">Kamu telah berhasil menyelesaikan tugas.</string>

    <string name="popup_error_title">Upss</string>
    <string name="popup_success_title">Berhasil</string>

    <string name="popup_error_btn">Tutup</string>
    <string name="popup_success_btn">Selesai</string>

    <!-- Toast -->
    <string name="toast_success_upload">Story berhasil diunggah</string>

    <!-- Validasi -->
    <string name="error_invalid_email">Masukkan format Email yang sesuai</string>
    <string name="error_password_too_short">Password kurang dari 8 karakter</string>
    <string name="error_empty_description">Silakan masukkan deskripsi</string>
    <string name="error_empty_image">Gambar kosong</string>
    <string name="error_open_camera">Gagal membuka kamera.</string>
    <string name="success_take_picture">Berhasil mengambil gambar.</string>
    <string name="error_take_picture">Gagal mengambil gambar.</string>

    <!-- Waktu -->
    <string name="time_just_now">baru saja</string>

    <plurals name="time_minutes_ago">
        <item quantity="one">%1$d menit yang lalu</item>
        <item quantity="other">%1$d menit yang lalu</item>
    </plurals>

    <plurals name="time_hours_ago">
        <item quantity="one">%1$d jam yang lalu</item>
        <item quantity="other">%1$d jam yang lalu</item>
    </plurals>

    <plurals name="time_days_ago">
        <item quantity="one">%1$d hari yang lalu</item>
        <item quantity="other">%1$d hari yang lalu</item>
    </plurals>

    <plurals name="time_weeks_ago">
        <item quantity="one">%1$d minggu yang lalu</item>
        <item quantity="other">%1$d minggu yang lalu</item>
    </plurals>

    <plurals name="time_months_ago">
        <item quantity="one">%1$d bulan yang lalu</item>
        <item quantity="other">%1$d bulan yang lalu</item>
    </plurals>


    <!-- Dialog Edit -->
    <string name="dialog_exit_edit_title">Batalkan Mengedit?</string>
    <string name="dialog_exit_edit_message">Perubahan yang belum disimpan akan hilang. Yakin ingin keluar?</string>

    <!-- Teks Tambahan -->
    <string name="instogram_mobile">Pengalaman Instogram Mobile sebagai Ruang Digital Personal</string>
    <string name="simpan">Simpan</string>

    <!-- Base URL Avatar -->
    <string name="avatar_base_url">https://api.dicebear.com/9.x/initials/png?seed=%1$s</string>

    <!-- Form -->
    <string name="masukkan_password_kamu">Masukkan Password Kamu</string>
    <string name="masukkan_email_kamu">Masukkan Email Kamu</string>
    <string name="masukkan_nama_kamu">Masukkan Nama Kamu</string>

    <!-- Asset -->
    <string name="bg_auth">bg_auth</string>
    <string name="back">kembali</string>
    <string name="add_story">tambah_story</string>
    <string name="like">suka</string>
    <string name="comment">komentar</string>
    <string name="share">bagikan</string>
    <string name="option">opsi</string>
    <string name="music">musik</string>
    <string name="centang">centang</string>
    <string name="google">google</string>
    <string name="facebook">facebook</string>
    <string name="flash">flash</string>
    <string name="ganti">ganti</string>
    <string name="take_picture">ambil gambar</string>
    <string name="filter">filter</string>
    <string name="sticker">stiker</string>
    <string name="simmer">simmer</string>
    <string name="detail_story">Detail Cerita</string>

    <!-- Angka -->
    <string name="_25rb">25rb</string>
    <string name="_5rb">5rb</string>
    <string name="_15rb">15rb</string>
    <string name="_245rb">245rb</string>
    <string name="disukai_oleh_238rb_orang">Disukai oleh 238rb orang</string>
    <string name="_4_jam_yang_lalu">4 jam yang lalu</string>

    <!-- Akses -->
    <string name="wellcome">Selamat Datang</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="daftar_disini">Daftar di sini</string>
    <string name="lupa_password">Lupa Password?</string>
    <string name="login">Masuk</string>
    <string name="daftarkan_diri_kamu">Daftarkan Dirimu</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="login_disini">Masuk di sini</string>
    <string name="sign_up">Daftar</string>

    <!-- Navigasi -->
    <string name="story">Cerita</string>
    <string name="profile">Profil</string>
    <string name="tambahkan_deskripsi">Tambahkan Deskripsi..</string>
    <string name="posting">Posting</string>

    <!-- Aksesibilitas -->
    <string name="desc_notification_icon">ikon_notifikasi</string>
    <string name="desc_settings_icon">ikon_pengaturan</string>

    <!-- Pengaturan -->
    <string name="instogram_application">Aplikasi Instogram</string>
    <string name="mode_gelap">Mode Gelap</string>
    <string name="ganti_bahasa">Ganti Bahasa</string>
    <string name="indonesia">Indonesia</string>
    <string name="appearance">Tampilan</string>
    <string name="kontak_darurat">Kontak Darurat</string>
    <string name="dialog_open_setting_edit_title">Izin Lokasi Diperlukan</string>
    <string name="dialog_open_setting_edit_message">Aplikasi membutuhkan izin lokasi untuk menambahkan cerita dengan lokasi Anda. Aktifkan izin di pengaturan.</string>


    <!-- Story tidak tersedia -->
    <string name="story_tidak_tersedia">Cerita tidak tersedia</string>

    <string name="pengaturan">Pengaturan</string>
    <string name="privacy">Privacy</string>
    <string name="security">Security</string>
    <string name="ganti_kata_sandi">Ganti Kata Sandi</string>
    <string name="keluar">Keluar</string>

    <!--    maps-->
    <string name="normal_type">Normal</string>
    <string name="satellite_type">Satellite</string>
    <string name="terrain_type">Terrain</string>
    <string name="hybrid_type">Hybrid</string>
    <string name="retry">Coba Lagi</string>
    <string name="maps">Maps</string>
    <string name="find_my_location">Temukan Lokasi Saya</string>
    <string name="user_story">Story Pengguna</string>
    <string name="dialog_exit_edit_yes">Ya</string>
    <string name="dialog_exit_edit_no">Tidak</string>
</resources>
