...
        android:clickable="true"
        android:elevation="20dp"
        android:focusable="true"
        android:visibility="invisible" />

    <com.sn.lib.NestedProgress
        android:id="@+id/loading"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:elevation="24dp"
        android:visibility="invisible"
        app:innerAnimInterpolator="accelerateDecelerate"
        app:innerLoaderColor="@color/color_variant"
...
