<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/navigation_story"
        android:icon="@drawable/nav_story"
        android:title="@string/story" />
    <item
        android:id="@+id/navigation_maps"
        android:icon="@drawable/globe_icon"
        android:title="@string/maps" />

    <item
        android:id="@+id/navigation_profile"
        android:icon="@drawable/nav_profile"
        android:title="@string/profile" />

</menu>